--- a/packages/init/configs/package-top-package-web/package.json
+++ b/packages/init/configs/package-top-package-web/package.json
@@ -9,14 +9,16 @@
         "compile": "virmator compile",
         "docs": "virmator docs",
         "format": "virmator format",
+        "lint": "virmator lint fix",
         "publish": "virmator publish npm run test:all",
         "start": "virmator frontend",
         "test": "virmator test web",
-        "test:all": "npm run compile && concurrently --colors --kill-others-on-fail -c auto --names tests,spelling,format,docs,deps \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\"",
+        "test:all": "npm run compile && concurrently --colors --kill-others-on-fail -c auto --names tests,spelling,format,docs,deps,lint \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\" \"npm run test:lint\"",
         "test:coverage": "npm run test coverage",
         "test:deps": "virmator deps check",
         "test:docs": "virmator docs check",
         "test:format": "virmator format check",
+        "test:lint": "virmator lint",
         "test:spelling": "virmator spellcheck"
     }
 }
