--- a/package.json
+++ b/package.json
@@ -10,18 +10,33 @@
         "compile": "virmator compile",
         "docs": "virmator docs",
         "format": "virmator format",
+        "lint": "virmator lint fix",
         "publish": "virmator publish \"npm run compile && npm run test:all\"",
         "test": "mono-vir for-each-async npm run test",
-        "test:all": "npm run compile && concurrently --colors --kill-others-on-fail -c auto --names tests,spelling,format,docs,deps \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\"",
+        "test:all": "npm run compile && concurrently --colors --kill-others-on-fail -c auto --names tests,spelling,format,docs,deps,lint \"npm run test:coverage\" \"npm run test:spelling\" \"npm run test:format\" \"npm run test:docs\" \"npm run test:deps\" \"npm run test:lint\"",
         "test:coverage": "mono-vir for-each-async npm run test:coverage",
         "test:deps": "virmator deps check",
         "test:docs": "virmator docs check",
         "test:format": "virmator format check",
+        "test:lint": "virmator lint",
         "test:spelling": "virmator spellcheck",
         "test:update": "mono-vir for-each-async npm run test:update"
     },
     "devDependencies": {
+        "@eslint/js": "^9.8.0",
+        "@stylistic/eslint-plugin": "^2.6.1",
+        "@stylistic/eslint-plugin-ts": "^2.6.1",
+        "@typescript-eslint/eslint-plugin": "^8.0.0",
         "cspell": "^8.12.1",
+        "dependency-cruiser": "^16.3.10",
+        "esbuild": "^0.23.0",
+        "eslint": "^9.8.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-jsdoc": "^48.11.0",
+        "eslint-plugin-mocha": "^10.5.0",
+        "eslint-plugin-playwright": "^1.6.2",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-sonarjs": "^1.0.4",
         "markdown-code-example-inserter": "^1.0.0",
         "mono-vir": "^1.0.1",
         "npm-check-updates": "^16.14.20",
@@ -33,6 +48,7 @@
         "prettier-plugin-packagejson": "^2.5.1",
         "prettier-plugin-sort-json": "^4.0.0",
         "prettier-plugin-toml": "^2.0.1",
+        "typescript-eslint": "^8.0.0",
         "virmator": "./"
     },
     "overrides": {
