--- a/packages/compile/package.json
+++ b/packages/compile/package.json
@@ -42,6 +42,7 @@
         "c8": "^10.1.2",
         "chalk": "^5.3.0",
         "concurrently": "^8.2.2",
+        "istanbul-smart-text-reporter": "^1.1.4",
         "mono-vir": "^1.0.1",
         "tsx": "^4.16.2",
         "typescript": "^5.5.4"
