--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -40,8 +40,10 @@
     },
     "devDependencies": {
         "@types/node": "^20.14.12",
+        "c8": "^10.1.2",
         "dependency-cruiser": "^16.3.10",
         "esbuild": "^0.23.0",
+        "istanbul-smart-text-reporter": "^1.1.4",
         "npm-check-updates": "^16.14.20"
     },
     "publishConfig": {
