--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -41,7 +41,9 @@
     },
     "devDependencies": {
         "@types/node": "^22.0.0",
+        "c8": "^10.1.2",
         "esbuild": "^0.23.0",
+        "istanbul-smart-text-reporter": "^1.1.4",
         "markdown-code-example-inserter": "^1.0.0",
         "typedoc": "^0.26.5"
     },
