--- a/packages/format/package.json
+++ b/packages/format/package.json
@@ -36,6 +36,8 @@
         "mri": "^1.2.0"
     },
     "devDependencies": {
+        "c8": "^10.1.2",
+        "istanbul-smart-text-reporter": "^1.1.4",
         "prettier": "^3.3.3",
         "prettier-plugin-interpolated-html-tags": "^1.0.5",
         "prettier-plugin-jsdoc": "^1.3.0",
