--- a/packages/lint/package.json
+++ b/packages/lint/package.json
@@ -39,6 +39,7 @@
         "@stylistic/eslint-plugin": "^2.6.1",
         "@stylistic/eslint-plugin-ts": "^2.6.1",
         "@typescript-eslint/eslint-plugin": "^8.0.0",
+        "c8": "^10.1.2",
         "eslint": "^9.8.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-jsdoc": "^48.11.0",
@@ -46,6 +47,7 @@
         "eslint-plugin-playwright": "^1.6.2",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-sonarjs": "^1.0.4",
+        "istanbul-smart-text-reporter": "^1.1.4",
         "typescript-eslint": "^8.0.0"
     },
     "publishConfig": {
