--- a/packages/virmator/package.json
+++ b/packages/virmator/package.json
@@ -53,6 +53,8 @@
         "tsx": "^4.16.2"
     },
     "devDependencies": {
-        "@types/node": "^20.14.12"
+        "@types/node": "^20.14.12",
+        "c8": "^10.1.2",
+        "istanbul-smart-text-reporter": "^1.1.4"
     }
 }
