--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -4,6 +4,8 @@ on:
     push:
         tags:
             - 'v*'
+permissions:
+    contents: write
 
 jobs:
     tagged-release:
@@ -11,9 +13,9 @@ jobs:
         runs-on: 'ubuntu-latest'
 
         steps:
-            - uses: actions/checkout@v4.1.1
+            - uses: actions/checkout@v4.1.7
             - name: Use Node.js
-              uses: actions/setup-node@v4.0.2
+              uses: actions/setup-node@v4.0.3
               with:
                   node-version-file: '.nvmrc'
             - name: run test
@@ -33,9 +35,15 @@ jobs:
                   mv "$originalTarName" "$newTarName"
                   echo ::set-output name=tarName::"$newTarName"
 
-            - uses: 'marvinpinto/action-automatic-releases@latest'
+            - name: latest release
+              uses: softprops/action-gh-release@v2.0.8
               with:
-                  repo_token: '${{ secrets.GITHUB_TOKEN }}'
-                  prerelease: false
-                  files: |
-                      ${{ steps.vars.outputs.tarName }}
+                  make_latest: true
+                  files: ${{ steps.vars.outputs.tarName }}
+
+            - name: tagged release
+              uses: softprops/action-gh-release@v2.0.5
+              with:
+                  make_latest: false
+                  files: ${{ steps.vars.outputs.tarName }}
+                  tag_name: latest
