--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,14 +11,20 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [ubuntu-latest, macos-latest]
         steps:
-            - uses: actions/checkout@v4.1.1
+            - uses: actions/checkout@v4.1.7
             - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v4.0.2
+              uses: actions/setup-node@v4.0.3
               with:
                   node-version-file: '.nvmrc'
+            # handle NPM / Node.js repeatedly bricking their npm setup on Windows
+            - if: runner.os == 'Windows'
+              shell: bash
+              run: |
+                  npm install npm
             - name: run test
+              shell: bash
               run: |
                   npm ci
                   npx playwright install --with-deps
