--- a/packages/init/configs/.github/workflows/tests-node.yml
+++ b/packages/init/configs/.github/workflows/tests-node.yml
@@ -18,7 +18,13 @@ jobs:
               uses: actions/setup-node@v4.0.3
               with:
                   node-version-file: '.nvmrc'
+            # handle NPM / Node.js repeatedly bricking their npm setup on Windows
+            - if: runner.os == 'Windows'
+              shell: bash
+              run: |
+                  npm install npm
             - name: run test
+              shell: bash
               run: |
                   npm ci
                   npm run test:all
