--- a/packages/compile/package.json
+++ b/packages/compile/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/compile",
-    "version": "13.0.0",
+    "version": "13.0.1",
     "description": "Default TS compile plugin for virmator.",
     "keywords": [
         "virmator",
@@ -21,9 +21,9 @@
         "url": "https://github.com/electrovir"
     },
     "type": "module",
-    "main": "src/compile.ts",
-    "module": "src/compile.ts",
-    "types": "src/compile.ts",
+    "main": "dist/compile.js",
+    "module": "dist/compile.js",
+    "types": "dist/compile.d.ts",
     "scripts": {
         "compile": "virmator compile",
         "test": "virmator test node",
@@ -33,12 +33,12 @@
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
-        "@virmator/core": "^13.0.0",
+        "@virmator/core": "^13.0.1",
         "run-time-assertions": "^1.5.2"
     },
     "devDependencies": {
         "@types/node": "^22.1.0",
-        "@virmator/plugin-testing": "^13.0.0",
+        "@virmator/plugin-testing": "^13.0.1",
         "c8": "^10.1.2",
         "chalk": "^5.3.0",
         "concurrently": "^8.2.2",
