--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/scripts",
-    "version": "13.0.0",
+    "version": "13.0.1",
     "private": true,
     "description": "Internal virmator scripts.",
     "keywords": [
@@ -30,7 +30,7 @@
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
         "mri": "^1.2.0",
-        "virmator": "*"
+        "virmator": "^13.0.1"
     },
     "devDependencies": {
         "@types/node": "^22.1.0"
