--- a/packages/format/package.json
+++ b/packages/format/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/format",
-    "version": "13.0.1",
+    "version": "13.0.2",
     "description": "Default format plugin for virmator.",
     "keywords": [
         "virmator",
@@ -21,9 +21,9 @@
         "url": "https://github.com/electrovir"
     },
     "type": "module",
-    "main": "dist/format.js",
-    "module": "dist/format.js",
-    "types": "dist/format.d.ts",
+    "main": "src/format.ts",
+    "module": "src/format.ts",
+    "types": "src/format.ts",
     "scripts": {
         "compile": "virmator compile",
         "test": "virmator test node",
@@ -32,7 +32,7 @@
     },
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
-        "@virmator/core": "^13.0.1",
+        "@virmator/core": "^13.0.2",
         "mri": "^1.2.0"
     },
     "devDependencies": {
