--- a/packages/spellcheck/package.json
+++ b/packages/spellcheck/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/spellcheck",
-    "version": "13.0.1",
+    "version": "13.0.2",
     "description": "Default spellcheck plugin for virmator",
     "keywords": [
         "virmator",
@@ -21,9 +21,9 @@
         "url": "https://github.com/electrovir"
     },
     "type": "module",
-    "main": "dist/spellcheck.js",
-    "module": "dist/spellcheck.js",
-    "types": "dist/spellcheck.d.ts",
+    "main": "src/spellcheck.ts",
+    "module": "src/spellcheck.ts",
+    "types": "src/spellcheck.ts",
     "scripts": {
         "compile": "virmator compile",
         "test": "virmator test node",
@@ -33,13 +33,13 @@
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
-        "@virmator/core": "^13.0.1",
+        "@virmator/core": "^13.0.2",
         "mri": "^1.2.0",
         "run-time-assertions": "^1.5.2"
     },
     "devDependencies": {
         "@types/node": "^22.1.0",
-        "@virmator/plugin-testing": "^13.0.1",
+        "@virmator/plugin-testing": "^13.0.2",
         "c8": "^10.1.2",
         "concurrently": "^8.2.2",
         "cspell": "^8.13.1",
