--- a/packages/init/configs/package-mono-package-web/package.json
+++ b/packages/init/configs/package-mono-package-web/package.json
@@ -13,6 +13,9 @@
         "test:coverage": "npm run test coverage",
         "test:docs": "virmator docs check"
     },
+    "engines": {
+        "node": ">=22"
+    },
     "publishConfig": {
         "access": "public"
     }
