--- a/packages/init/configs/package-top-package-web/package.json
+++ b/packages/init/configs/package-top-package-web/package.json
@@ -20,5 +20,8 @@
         "test:format": "virmator format check",
         "test:lint": "virmator lint",
         "test:spelling": "virmator spellcheck"
+    },
+    "engines": {
+        "node": ">=22"
     }
 }
