--- a/packages/compile/package.json
+++ b/packages/compile/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/compile",
-    "version": "13.0.5",
+    "version": "13.1.0",
     "description": "Default TS compile plugin for virmator.",
     "keywords": [
         "virmator",
@@ -33,12 +33,12 @@
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
-        "@virmator/core": "^13.0.5",
+        "@virmator/core": "^13.1.0",
         "run-time-assertions": "^1.5.2"
     },
     "devDependencies": {
         "@types/node": "^22.1.0",
-        "@virmator/plugin-testing": "^13.0.5",
+        "@virmator/plugin-testing": "^13.1.0",
         "c8": "^10.1.2",
         "chalk": "^5.3.0",
         "concurrently": "^8.2.2",
@@ -49,6 +49,9 @@
     },
     "peerDependencies": {
         "typescript": "*"
+    },
+    "engines": {
+        "node": ">=22"
     },
     "publishConfig": {
         "access": "public"
