--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/deps",
-    "version": "13.0.5",
+    "version": "13.1.0",
     "description": "Default TS deps plugin for virmator.",
     "keywords": [
         "virmator",
@@ -35,7 +35,7 @@
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
-        "@virmator/core": "^13.0.5",
+        "@virmator/core": "^13.1.0",
         "mri": "^1.2.0"
     },
     "devDependencies": {
@@ -45,6 +45,9 @@
         "esbuild": "^0.23.0",
         "istanbul-smart-text-reporter": "^1.1.4",
         "npm-check-updates": "^17.0.0"
+    },
+    "engines": {
+        "node": ">=22"
     },
     "publishConfig": {
         "access": "public"
