--- a/packages/format/package.json
+++ b/packages/format/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/format",
-    "version": "13.0.5",
+    "version": "13.1.0",
     "description": "Default format plugin for virmator.",
     "keywords": [
         "virmator",
@@ -32,10 +32,11 @@
     },
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
-        "@virmator/core": "^13.0.5",
+        "@virmator/core": "^13.1.0",
         "mri": "^1.2.0"
     },
     "devDependencies": {
+        "@types/node": "^22.1.0",
         "c8": "^10.1.2",
         "istanbul-smart-text-reporter": "^1.1.4",
         "prettier": "^3.3.3",
@@ -46,6 +47,9 @@
         "prettier-plugin-packagejson": "^2.5.1",
         "prettier-plugin-sort-json": "^4.0.0",
         "prettier-plugin-toml": "^2.0.1"
+    },
+    "engines": {
+        "node": ">=22"
     },
     "publishConfig": {
         "access": "public"
