--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/frontend",
-    "version": "13.0.5",
+    "version": "13.1.0",
     "description": "Default frontend plugin for virmator.",
     "keywords": [
         "virmator",
@@ -36,7 +36,7 @@
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
-        "@virmator/core": "^13.0.5",
+        "@virmator/core": "^13.1.0",
         "mri": "^1.2.0"
     },
     "devDependencies": {
@@ -44,6 +44,9 @@
         "typescript": "^5.5.4",
         "vite": "^5.3.5",
         "vite-tsconfig-paths": "^4.3.2"
+    },
+    "engines": {
+        "node": ">=22"
     },
     "publishConfig": {
         "access": "public"
