--- a/packages/lint/package.json
+++ b/packages/lint/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/lint",
-    "version": "13.0.5",
+    "version": "13.1.0",
     "description": "Default ESLint linting plugin for virmator.",
     "keywords": [
         "virmator",
@@ -35,20 +35,26 @@
         "mri": "^1.2.0"
     },
     "devDependencies": {
+        "@eslint/eslintrc": "^3.1.0",
         "@eslint/js": "^9.8.0",
         "@stylistic/eslint-plugin": "^2.6.1",
         "@stylistic/eslint-plugin-ts": "^2.6.1",
+        "@types/node": "^22.1.0",
         "@typescript-eslint/eslint-plugin": "^8.0.0",
         "c8": "^10.1.2",
         "eslint": "^9.8.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-jsdoc": "^48.11.0",
-        "eslint-plugin-mocha": "^10.5.0",
         "eslint-plugin-playwright": "^1.6.2",
         "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-require-extensions": "^0.1.3",
         "eslint-plugin-sonarjs": "^1.0.4",
+        "eslint-plugin-unicorn": "^55.0.0",
         "istanbul-smart-text-reporter": "^1.1.4",
         "typescript-eslint": "^8.0.0"
+    },
+    "engines": {
+        "node": ">=22"
     },
     "publishConfig": {
         "access": "public"
