--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/scripts",
-    "version": "13.0.5",
+    "version": "13.1.0",
     "private": true,
     "description": "Internal virmator scripts.",
     "keywords": [
@@ -24,16 +24,19 @@
         "start": "tsx src/cli.ts",
         "test": "tsx src/cli.ts check",
         "test:coverage": "npm test",
-        "test:update": "npm test"
+        "test:update": "npm start"
     },
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
         "mri": "^1.2.0",
-        "virmator": "^13.0.5"
+        "virmator": "^13.1.0"
     },
     "devDependencies": {
         "@types/node": "^22.1.0"
+    },
+    "engines": {
+        "node": ">=22"
     },
     "publishConfig": {
         "access": "public"
