--- a/packages/spellcheck/package.json
+++ b/packages/spellcheck/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/spellcheck",
-    "version": "13.0.5",
+    "version": "13.1.0",
     "description": "Default spellcheck plugin for virmator",
     "keywords": [
         "virmator",
@@ -33,18 +33,21 @@
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
-        "@virmator/core": "^13.0.5",
+        "@virmator/core": "^13.1.0",
         "mri": "^1.2.0",
         "run-time-assertions": "^1.5.2"
     },
     "devDependencies": {
         "@types/node": "^22.1.0",
-        "@virmator/plugin-testing": "^13.0.5",
+        "@virmator/plugin-testing": "^13.1.0",
         "c8": "^10.1.2",
         "concurrently": "^8.2.2",
         "cspell": "^8.13.1",
         "istanbul-smart-text-reporter": "^1.1.4",
         "tsx": "^4.16.5"
+    },
+    "engines": {
+        "node": ">=22"
     },
     "publishConfig": {
         "access": "public"
