--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/mono-repo-root",
-    "version": "13.1.0",
+    "version": "13.1.1",
     "private": true,
     "type": "module",
     "workspaces": [
@@ -38,6 +38,7 @@
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-require-extensions": "^0.1.3",
         "eslint-plugin-sonarjs": "^1.0.4",
+        "eslint-plugin-unicorn": "^55.0.0",
         "markdown-code-example-inserter": "^1.0.0",
         "mono-vir": "^1.0.1",
         "npm-check-updates": "^17.0.0",
