--- a/packages/init/configs/package-mono-package-web/package.json
+++ b/packages/init/configs/package-mono-package-web/package.json
@@ -1,9 +1,9 @@
 {
     "license": "(MIT or CC0 1.0)",
     "type": "module",
-    "main": "dist/index.ts",
-    "module": "dist/index.ts",
-    "types": "dist/index.ts",
+    "main": "src/index.ts",
+    "module": "src/index.ts",
+    "types": "src/index.ts",
     "scripts": {
         "build": "virmator frontend build",
         "compile": "virmator compile",
