--- a/packages/publish/.npmignore
+++ b/packages/publish/.npmignore
@@ -1,24 +1,25 @@
-**/*/readme-examples/
-**/*/test/
+.*
+.not-committed/
 *.book-helper.*
 *.book.*
 *.d.ts.map
 *.test-helper.*
 *.test.*
 *.tgz
-.*
-.not-committed/
-/Icon?
+**/*/readme-examples/
+**/*/test/
 /coverage/
 /cspell.config.cjs
 /graphics/
+/Icon?
 /src/
 /www-static/
 bash-scripts/
 dist-docs/
+eslint.config.mjs
 generated-config-*
 index.html
+prettier.config.mjs
 test-files/
 todo.md
-tsconfig*.json
-tsconfig.tsbuildinfo
+tsconfig.*
