--- a/packages/help/package.json
+++ b/packages/help/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/help",
-    "version": "13.2.0",
+    "version": "13.2.1",
     "description": "Default help plugin for virmator.",
     "keywords": [
         "virmator",
@@ -33,6 +33,7 @@
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
+        "@virmator/core": "^13.2.1",
         "run-time-assertions": "^1.5.2"
     },
     "devDependencies": {
