--- a/packages/init/package.json
+++ b/packages/init/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/init",
-    "version": "13.2.0",
+    "version": "13.2.1",
     "description": "Default init plugin for virmator.",
     "keywords": [
         "virmator",
@@ -32,6 +32,7 @@
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
         "@augment-vir/node-js": "^29.3.0",
+        "@virmator/core": "^13.2.1",
         "simple-git": "^3.25.0"
     },
     "devDependencies": {
