--- a/packages/lint/package.json
+++ b/packages/lint/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@virmator/lint",
-    "version": "13.2.0",
+    "version": "13.2.1",
     "description": "Default ESLint linting plugin for virmator.",
     "keywords": [
         "virmator",
@@ -32,6 +32,7 @@
     },
     "dependencies": {
         "@augment-vir/common": "^29.3.0",
+        "@virmator/core": "^13.2.1",
         "mri": "^1.2.0"
     },
     "devDependencies": {
